--- a/g_tictactoe.html
+++ b/g_tictactoe.html
@@ -13,6 +13,13 @@
 			right: 0;
 			left: 0;
 		}
+
+		div{
+			display: block;
+			border: 2px black solid;
+			border-radius: 5px;
+			font-size: 2em;
+		}
 	</style>
 	<script src="tictactoe.js"></script>
 	<script>
