Modal window  works, populates relevant datafields

--- a/g_tictactoe.html
+++ b/g_tictactoe.html
@@ -14,11 +14,54 @@
 			left: 0;
 		}
 
-		div{
+		canvas div{
 			display: block;
 			border: 2px black solid;
 			border-radius: 5px;
 			font-size: 2em;
+		}
+
+		#modal{
+			position: fixed;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			left: 0;
+			background: rgba(0,0,0,0.6);
+			z-index: 999999;
+			opacity: 1;
+			transition: opacity 400ms ease-out;
+		}
+
+		#modal div{
+			text-align: center;
+			max-width: 500px;
+			margin: auto;
+			margin-top: 10%;
+		}
+
+		#modal div form{
+			background-color: #fff;
+			font-size: 2em;
+			padding: 10px;
+		}
+
+		#modal div form button{
+			font-size: 1em;
+		}
+
+		div#begin.btn{
+			background-color: #aaa;
+			border: 1px solid #333;
+			display: block;
+			width: 100px;
+			color:  white;
+			user-select: none;
+			-webkit-user-select:  none;
+		}
+
+		div.btn:hover{
+			cursor: default;
 		}
 	</style>
 	<script src="tictactoe.js"></script>
@@ -30,6 +73,23 @@
 	</script>
 </head>
 <body>
-	
+	<div id="modal">
+		<div id="input">
+			<form>
+				<input type="radio" name="game_mode" value="1P" checked>1 Player (against A.I.)
+				<input type="radio" name="game_mode" value="2P">2 Player
+				<br>
+			</form>
+			<form>
+				<input type="radio" name="difficulty" value="0"> Easy
+				<input type="radio" name="difficulty" value="2" checked> Medium
+				<input type="radio" name="difficulty" value="4"> Hard
+			</form>
+			<form >
+				<div class="btn" id="begin">Begin</div>
+			</form>
+			
+		</div>
+	</div>
 </body>
 </html>
