Modal window now lets player select X or O

--- a/g_tictactoe.html
+++ b/g_tictactoe.html
@@ -85,6 +85,11 @@
 				<input type="radio" name="difficulty" value="2" checked> Medium
 				<input type="radio" name="difficulty" value="4"> Hard
 			</form>
+			<form>
+				<input type="radio" name="player" value="X_tile" checked> Player = X
+				<br>
+				<input type="radio" name="player" value="O_tile"> Player = O				
+			</form>
 			<form >
 				<div class="btn" id="begin">Begin</div>
 			</form>
